Added build to project

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 /coverage
 
 # production
-/build
+#/build
 
 # misc
 .DS_Store
@@ -27,3 +27,5 @@ yarn-error.log*
 .firebase/
 .firebaserc
 firebase.json
+*.css.map
+*.js.map
